--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vue-leaflet/vue-leaflet": "^0.6.1",
     "axios": "^0.26.1",
     "core-js": "^3.8.3",
+    "leaflet": "^1.7.1",
     "vue": "^3.2.13"
   },
   "devDependencies": {
