--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@vue-leaflet/vue-leaflet": "^0.6.1",
     "axios": "^0.26.1",
     "core-js": "^3.8.3",
+    "dayjs": "^1.11.0",
     "leaflet": "^1.7.1",
     "vue": "^3.2.13"
   },
